[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptshield"
version = "0.1.0"
description = "Open-source vulnerability scanner for LLM applications"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Salah-Adin Mozeb", email = "Sal127@proton.me"}
]
keywords = ["security", "llm", "ai-security", "owasp", "prompt-injection", "vulnerability-scanner", "mitre-atlas"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "click>=8.1.7",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
    "anthropic>=0.39.0",
    "openai>=1.50.0",
    "playwright>=1.45.0",
    "jinja2>=3.1.4",
    "pyyaml>=6.0.1",
    "cryptography>=42.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]
local-llm = [
    "ollama>=0.3.0",
]
pdf = [
    "weasyprint>=62.0",
]

[project.urls]
Homepage = "https://github.com/SalCyberAware/PromptShield"
Repository = "https://github.com/SalCyberAware/PromptShield"
Issues = "https://github.com/SalCyberAware/PromptShield/issues"
Documentation = "https://github.com/SalCyberAware/PromptShield/blob/main/README.md"

[project.scripts]
promptshield = "promptshield.cli:main"

[tool.setuptools.packages.find]
include = ["promptshield*"]

[tool.setuptools.package-data]
promptshield = ["attacks/data/*.yaml", "attacks/data/*.json"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
